--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -1,8 +1,7 @@
 <html>
-
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <script src=" https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff.js"></script>
     <link rel="stylesheet" type="text/css" href="liff.css" />
@@ -10,7 +9,7 @@
 
   <body>
     <!-- Title -->
-    <h2>LINE Things Starter</h2>
+    <h2>LINE Things Starter tmn</h2>
     <hr />
     <p>
       <img id="loading-animation" class="" src="loading.gif" height="14px" />
@@ -43,13 +42,11 @@
           <td class="device-info-cell device-info-val" id="click-count">0</td>
         </tr>
       </table>
+
       <hr />
       <!-- Toggle LED -->
-      <p>
-        <button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">Switch LED ON</button>
-      </p>
+      <p><button id="btn-led-toggle" class="btn btn-led-toggle" onclick="handlerToggleLed()">Switch LED ON</button></p>
       <hr />
     </div>
   </body>
-
 </html>
